; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_blknum.c_ext2fs_inode_bitmap_loc.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_blknum.c_ext2fs_inode_bitmap_loc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.ext4_group_desc = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_inode_bitmap_loc(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ext4_group_desc*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call %struct.ext4_group_desc* @ext4fs_group_desc(%struct.TYPE_4__* %6, i32 %9, i32 %10)
  store %struct.ext4_group_desc* %11, %struct.ext4_group_desc** %5, align 8
  %12 = load %struct.ext4_group_desc*, %struct.ext4_group_desc** %5, align 8
  %13 = getelementptr inbounds %struct.ext4_group_desc, %struct.ext4_group_desc* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @ext2fs_has_feature_64bit(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %2
  %21 = load %struct.ext4_group_desc*, %struct.ext4_group_desc** %5, align 8
  %22 = getelementptr inbounds %struct.ext4_group_desc, %struct.ext4_group_desc* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = trunc i64 %23 to i32
  %25 = shl i32 %24, 32
  br label %27

26:                                               ; preds = %2
  br label %27

27:                                               ; preds = %26, %20
  %28 = phi i32 [ %25, %20 ], [ 0, %26 ]
  %29 = or i32 %14, %28
  ret i32 %29
}

declare dso_local %struct.ext4_group_desc* @ext4fs_group_desc(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i64 @ext2fs_has_feature_64bit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
